<resources>
    <string name="app_name">Playpal</string>
    <string name="nav_home">Home</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_walker">Walker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_text">Hello, how are you?</string>
    <string name="title_activity_registration">Registration</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="dummy_dog_bio">
       Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
    </string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_to_playpal">Welcome to Playpal</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="acode">ACode</string>
    <string name="email_address">Email Address</string>
    <string name="or_sign_up_with">Or Sign Up With</string>
    <string name="lineTop">TODO</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="google">google</string>
    <string name="twitter">twitter</string>
    <string name="facebook">facebook</string>
    <string name="linebottom">lineBottom</string>
    <string name="googlesignin">googleSignIn</string>
    <string name="googlesignup">googleSignUp</string>
    <string name="twittersignup">twitterSignUp</string>
    <string name="githubsignup">githubSignUp</string>
    <string name="facebooksignup">facebookSignUp</string>
    <string name="reg2">Tells us about your</string>

    <string name="owner_profile">Dog Owner Profile</string>
    <string name="dog_profile">Dog Profile</string>


    <string name="logo">Logo</string>


    //Navigation Bar
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>


    <string name="playpal_services">Playpal Services</string>
    <string name="title_activity_dog_owner_profile">Dog Owner Profile</string>
    <string name="title_activity_dog_profile">Dog Profile</string>
    <string name="dog_owner">Dog Owner</string>
    <string name="dog_owner_bio">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur</string>
    <string name="dog_owner_1">Dog Owner</string>
    <string name="dog_owner_bio_1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur</string>
    <string name="dog_name">Dog Name</string>
    <string name="dog_name_bio">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</string>
    <string name="dog_name_1">Dog Name</string>
    <string name="dog_bio_1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</string>
    <string name="dog_image_description">image of dog</string>
    <string name="dog_owner_image">Dog Owner image</string>
    <string name="dog_owner_image_1">dog owner image back 1</string>
    <string name="dog_image_1">dog image description 1</string>
    <string name="form_username">Email</string>
    <string name="title_activity_services2">Services2</string>
    <string name="title_activity_service2">service2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="dog_name_hint">Dog\'s Name</string>
    <string name="dog_bio_hint">Dog\'s Bio</string>
    <string name="dog_ower_bio_hint">Tells us about you</string>
    <string name="tell_us_about_you">Tell Us About You</string>
    <string name="march_17_2022">March 17 2022</string>
    <string name="tell_us_about_your_doggo">Tell Us About Your Doggo</string>
    <string name="dog_breed">Dog Breed</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="weight">Weight</string>
    <string name="add_photos">Add photos</string>
    <string name="view_potential_match_profile">View Profile</string>
    <string name="likes">likesBtn</string>
    <string name="confirm_passsword">Confirm Passsword</string>
    <string name="or_register_with">Or Register With</string>
    <string name="register">Register</string>

    <string name="edit_owner_profile">Your Profile</string>
    <string name="edit_email">Email Address</string>
    <string name="owner_bio_hint">Owner Bio</string>
    <string name="owner_uploads_images_title">Show the community who you are</string>
    <string name="upload_dog_images_title">Show the community your dog</string>


</resources>