<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_marginBottom="1dp"
        android:layout_width="360dp"
        android:layout_height="650dp"
        android:elevation="50dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="15dp">

        <androidx.appcompat.widget.LinearLayoutCompat android:layout_marginBottom="17dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/card_back"
                android:contentDescription="@string/dog_owner_image_1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dog_owner_1"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="5dp"
                android:text="@string/dog_owner_bio_1"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


</LinearLayout>