<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center"
    android:id="@+id/frontCard"

    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="25dp"
        android:layout_width="360dp"
        android:layout_height="665dp"
        android:elevation="45dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="15dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/dog_front_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/card_front"
                android:contentDescription="@string/dog_image_description" />
            <TextView
                android:id="@+id/dog_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dog_name"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/dog_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/dog_name_bio"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.cardview.widget.CardView>


</LinearLayout>