<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".PlaypalRegister2">
    <!--
    <EditText
        android:id="@+id/dog_owner_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="96dp"
        android:autofillHints=""
        android:ems="7"
        android:hint="@string/reg2"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        -->


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reg3_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tell_us_about_you"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textview.MaterialTextView>

    <Button
        android:id="@+id/date_picker"
        style="?android:spinnerStyle"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/march_17_2022"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg3_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dog_owner_bio_input_texfield"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"

        android:layout_marginTop="30dp"
        app:endIconMode="clear_text"
        app:helperTextTextColor="#4F4F4F"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_picker"

        >

        <EditText
            android:id="@+id/dog_owner_bio"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:autofillHints="Tells Us about you"
            android:gravity="start"
            android:hint="@string/dog_ower_bio_hint"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_register_page_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="@string/sign_up"
        android:textColor="#263238"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_owner_bio_input_texfield" />


</androidx.constraintlayout.widget.ConstraintLayout>